# redfox-bot

./: .env.example  .gitignore  LICENSE  README.md  main.py  openapi.json  pyproject.toml
backend/: api_client.py  beatmap.py  database.py  oauth.py  scores.py  user.py
backend/expections/: __init__.py  beatmap.py  renderer.py  scores.py  user.py
config/: api.json  api.yaml  config.example.yaml  strings.json  strings.yaml
docs/: minifilter_guide.md  minifilter_guide_en.md  skin_guide.md  skin_guide_en.md
frontend/discord/: main.py  util.py
frontend/discord/cogs/: auth.py  beatmap.py  scores.py  user.py
frontend/qq/: main.py
g0v0bot_discord.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
minifilters/: __init__.py
minifilters/score_card_basic/: __init__.py  minifilter.yaml
minifilters/score_list_basic/: __init__.py  minifilter.yaml
minifilters/today_bp_basic/: __init__.py  minifilter.yaml
minifilters/user/: card.py
minifilters/user_card_basic/: __init__.py  minifilter.yaml
minifilters/user_card_extra/: __init__.py  minifilter.yaml
renderer/: __init__.py  beatmap.py  renderer_template.py  scores.py  skin_loader.py  user.py
skins/default/: beatmap_card.html  score_card.html  score_list.html  today_bp.html  user_card.html
utils/: caches.py  flt_mgr.py  html2image.py  logger.py  scheduler.py  scheduler_registry.py  strings.py  variable.py
